# livekit-google-plugin

./: README.md  pyproject.toml
livekit/plugins/google/: llm.py  stt.py  tools.py  tts.py  utils.py
livekit/plugins/google/beta/: gemini_tts.py
livekit/plugins/google/realtime/: api_proto.py  realtime_api.py
