[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "livekit-google-plugin"
dynamic = ["version"]
description = "LiveKit plugin for Gemini realtime"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.9.0"
authors = [{ name = "heershah" }]
keywords = ["voice", "ai", "realtime", "audio", "video", "livekit", "tts"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: Other/Proprietary License",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Multimedia :: Video",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "livekit-agents[codecs]>=1.3.10",
  "aiohttp>=3.8.0",
]

[project.urls]
Source = "https://github.com/heershah434/livekit-google-plugin.git"

[tool.hatch.version]
path = "livekit/plugins/google/version.py"

[tool.hatch.build.targets.wheel]
packages = ["livekit"]

[tool.hatch.build.targets.sdist]
include = ["/livekit"]